--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,5 @@ jobs:
   main:
     uses: deadsnakes/runbooks/.github/workflows/update-meta-gbp.yml@main
     with:
-      dists-json: '["focal", "noble"]'
+      dists-json: '["noble"]'
     secrets: inherit
